# full-stack-todo

./: .env  .gitignore  README.md  asset-manifest.json  docker-compose.yml  index.html
.github/workflows/: deployment.yml  integration.yml
backend/: .env  Dockerfile  README.md  pyproject.toml
backend/backend/: app.py
backend/backend/database/: __init__.py
backend/backend/restapi/: __init__.py
backend/backend/restapi/resources/: __init__.py
backend/scripts/: test.py
backend/tests/: conftest.py  test_api.py  test_backend.py  test_database.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.test.tsx  App.tsx  TodoContext.tsx  utils.ts
frontend/src/components/MainTitle/: index.test.tsx  index.tsx
frontend/src/components/TodoInput/: index.test.tsx  index.tsx
frontend/src/components/TodosListView/: EditPanel.test.tsx  EditPanel.tsx  index.test.tsx  index.tsx
frontend/src/pages/: Home.tsx
frontend/src/reducers/: index.ts  index.tsx
static/js/: 2.38a05164.chunk.js  2.38a05164.chunk.js.map  2.6c204eb9.chunk.js  2.6c204eb9.chunk.js.map  2.7d210ba9.chunk.js  2.7d210ba9.chunk.js.map  main.861f78a8.chunk.js  main.861f78a8.chunk.js.map  main.a38b8828.chunk.js  main.a38b8828.chunk.js.map  main.fb13ad7a.chunk.js  main.fb13ad7a.chunk.js.map  runtime-main.a7c82223.js  runtime-main.a7c82223.js.map
todo-backend/: pyproject.toml
todo-backend/tests/: test_todo_backend.py
todo-frontend/: package-lock.json  package.json
